-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
Qt Creator 3.5.0-beta1
-
Ubuntu 12.04 32bit, QC 3.5 beta snapshots based on Qt5.5
Windows 7 64 bit
-
b6b14de4d20d8349c67981d9763efcc4445694c9
Steps to reproduce:
- start QC with clean settings
- create a new Qt version and hit Apply continuously
Current result:
- new Qt version will be added again and again..
- sometimes the Qt version has no display name (at least inside the Qt version list, when checking the details they appear as having the same value as the others)
Additionally I had several of the following soft asserts on the cmdline
SOFT ASSERT: "findQtVersion(id) < 0" in file /work/build/qtsdk/qt-creator/src/plugins/qtsupport/qtkitconfigwidget.cpp, line 124
| For Gerrit Dashboard: QTCREATORBUG-14700 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 120849,4 | Fix that pressing apply was adding more Qt Versions | 3.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |