Fix that pressing apply was adding more Qt Versions

Broke with 307fe5553a5780e24ac161c3fec68fcd95c60eb1

Task-number: QTCREATORBUG-14700
Change-Id: I40b8e0baffd6d69400586f823079234c0ac9e078
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>
Reviewed-by: Christian Stenger <christian.stenger@theqtcompany.com>
Reviewed-by: Daniel Teske <daniel.teske@theqtcompany.com>
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>